ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raritetnik-ingress
  namespace: raritetnik
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.staging.raritetnik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8141
    - host: file.staging.raritetnik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8145
    - host: auction.staging.raritetnik.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8146
